# Each source test file is instantiated in single and double precision
set(PERFTESTS guru_timing_test manysmallprobs spreadtestnd spreadtestndall)
# Other than that, it looks like no actual tests executed here by CMake

foreach(TEST ${PERFTESTS})
    add_executable(${TEST} ${TEST}.cpp)
    if(FINUFFT_USE_DUCC0)
        target_compile_definitions(${TEST} PRIVATE -DFINUFFT_USE_DUCC0)
    endif()
    finufft_link_test(${TEST})

    add_executable(${TEST}f ${TEST}.cpp)
    target_compile_definitions(${TEST}f PRIVATE -DSINGLE)
    if(FINUFFT_USE_DUCC0)
        target_compile_definitions(${TEST}f PRIVATE -DFINUFFT_USE_DUCC0)
    endif()
    finufft_link_test(${TEST}f)
endforeach()

add_executable(binsort_bench binsort_bench.cpp)
finufft_link_test(binsort_bench)
target_link_libraries(binsort_bench PRIVATE xsimd)
target_compile_options(binsort_bench PRIVATE ${FINUFFT_ARCH_FLAGS})
add_executable(binsort_benchf binsort_bench.cpp)
target_compile_definitions(binsort_benchf PRIVATE -DSINGLE)
finufft_link_test(binsort_benchf)
target_link_libraries(binsort_benchf PRIVATE xsimd)
target_compile_options(binsort_benchf PRIVATE ${FINUFFT_ARCH_FLAGS})

include(CheckIncludeFile)
check_include_file("getopt.h" HAVE_GETOPT_H)
if(HAVE_GETOPT_H)
    add_executable(perftest perftest.cpp)
    if(FINUFFT_USE_DUCC0)
        target_compile_definitions(perftest PRIVATE -DFINUFFT_USE_DUCC0)
    endif()
    finufft_link_test(perftest)
endif()
